logs/ciciol.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/ciciol'...
Listing './lib/python3.5/site-packages/ciciol/backends'...
Listing './lib/python3.5/site-packages/ciciol/handlers'...
Compiling './lib/python3.5/site-packages/ciciol/handlers/twitter.py'...
***   File "./lib/python3.5/site-packages/ciciol/handlers/twitter.py", line 65
    except tweepy.TweepError, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ciciol/utils'...
Compiling './lib/python3.5/site-packages/ciciol/utils/setup.py'...
***   File "./lib/python3.5/site-packages/ciciol/utils/setup.py", line 22
    print "Add this to your configuration file in the twitter section:"
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ciciol-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tweepy'...
Compiling './lib/python3.5/site-packages/tweepy/api.py'...
***   File "./lib/python3.5/site-packages/tweepy/api.py", line 318
    except TweepError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/auth.py'...
***   File "./lib/python3.5/site-packages/tweepy/auth.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/binder.py'...
***   File "./lib/python3.5/site-packages/tweepy/binder.py", line 148
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/cache.py'...
***   File "./lib/python3.5/site-packages/tweepy/cache.py", line 157
    print 'Warning! FileCache locking not supported on this system!'
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweepy/parsers.py'...
***   File "./lib/python3.5/site-packages/tweepy/parsers.py", line 39
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/streaming.py'...
***   File "./lib/python3.5/site-packages/tweepy/streaming.py", line 126
    except Exception, exception:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweepy/utils.py'...
***   File "./lib/python3.5/site-packages/tweepy/utils.py", line 91
    raise ImportError, "Can't load a json library"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tweepy-1.8.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
